--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Phạm Vũ Linh</span>
+                        <span>Đỗ Thị Thảo Ngân</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
@@ -142,8 +142,8 @@
     </div>
 </body>
 <script>
-    let datetxt = "06-05-2005";
-    let datatxtletter = "Tình yêu của đời anh. Em là một cô gái rất đặc biệt. Anh luôn thầm cảm ơn vì em đã đến bên cạnh anh. Ngày hôm nay anh chúc em mọi điều an lành, thật nhiều sức khỏe, thật nhiều niềm vui. Anh luôn hy vọng mình sẽ luôn cùng nhau đón nhiều sinh nhật như thế này. Mừng sinh nhật em.💕";
+    let datetxt = "08-05-2000";
+    let datatxtletter = "Em này, anh rất vui vì em có thể mở lòng với anh. Anh chỉ muốn em biết rằng bây giờ em có anh. Bất cứ khi nào em cảm thấy buồn hay tổn thương , anh sẽ ở đây vì em và nếu em cần ai đó để trò chuyện, anh luôn có thể đến với em. Mặc dù anh vẫn đang tìm hiểu về em, nhưng anh biết em đã trải qua rất nhiều điều và anh chỉ muốn em biết rằng bắt đầu từ thời điểm này trong cuộc đời, bất cứ điều gì em gặp phải, chúng ta đều có thể cùng nhau đối mặt và theo thời gian, chúng ta có thể dần dần tìm hiểu thêm về nhau và chúng ta có thể chia sẻ cảm xúc của nhau cùng nhau và anh hy vọng anh có thể ôm em thật chặt để những mảnh vỡ của em có thể quay lại với nhau. Anh luôn hy vọng mình sẽ luôn cùng nhau đón nhiều sinh nhật như thế này. Mừng sinh nhật em.💕";
     let titleLetter = "Gửi em";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
