--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <div class="right">
                 <div class="box__account">
                     <div class="image">
-                        <img src="https://i.pinimg.com/474x/bf/d1/1c/bfd11ccafab79434c92931fceb93f89a.jpg" alt="">
+                        <img src="https://scontent.fhan19-1.fna.fbcdn.net/v/t39.30808-6/393730886_3699613523649747_5065792722099586164_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEKo6RfRqvx4W_zhnwvOQtHUMM9J8XmEtZQwz0nxeYS1rez4XfpFCr0MqepXH567ftQZPa8dfrf9OCFvH20nCoN&_nc_ohc=xxX7oWQCxJMAb4xpoMd&_nc_oc=AdhKV-JsNiJGLDK9WMg46Brf8xeNSck2ZUh0CseTlrNMvmCFQGWkLNeE0tyWAODtIrw&_nc_ht=scontent.fhan19-1.fna&oh=00_AfCMN75sxwswcowFVkq5_urB6lc9cWsaKRy5OFHYVZQIWA&oe=661B5256" alt="">
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Phạm Vũ Linh</span>
+                        <span>Đỗ Thị Thảo Ngân</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
