--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <div class="right">
                 <div class="box__account">
                     <div class="image">
-                        <img src="z5776938506894_dbcadeae8256d034916902baf1b559e3.jpg" alt="">
+                        <img src="Capture.PNG" alt="">
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span> Hồng Lâm </span>
+                        <span> Nguyễn Phương Anh </span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
