--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span> Nguyễn Phương Anh </span>
+                        <span> Phương Anh </span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
